--- a/index.html
+++ b/index.html
@@ -5,9 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <link rel="stylesheet" href="style.css">
-  <script src="src.js"></script>
+  <script src="src.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+
+
+
+  <div class="calc-container">
+    <div class="display-container">
+      <p class="display-text"> </p>
+    </div>
+
+    <button class="btn-c">C</button>
+    <div class="buttons-container">
+
+      <button class="btn num">9</button>
+      <button class="btn num">8</button>
+      <button class="btn num">7</button>
+
+      <button class="btn op">/</button>
+
+      <button class="btn num">4</button>
+      <button class="btn num">5</button>
+      <button class="btn num">6</button>
+
+      <button class="btn op">X</button>
+
+      <button class="btn num">1</button>
+      <button class="btn num">2</button>
+      <button class="btn num">3</button>
+
+      <button class="btn op">-</button>
+
+      <button class="btn num">0</button>
+
+      <button class="btn dot">.</button>
+
+      <button class="btn op">+</button>
+      <button class="btn eq">=</button>
+    </div>
+
+  </div>
+
 </body>
 </html>
